# get-shippy-fullstack-challenge-sanford

./: .gitignore  README.md
backend/: pyproject.toml
backend/backend/: crud.py  main.py  models.py  schemas.py
backend/backend/tests/: test_something.py
frontend/: .eslintrc.json  .prettierrc.json  components.json  package-lock.json  package.json  tsconfig.json
frontend/public/: index.html
frontend/src/: App.tsx  index.tsx
frontend/src/components/allReports/: AllReports.tsx
frontend/src/components/common/: accordion.tsx  alert-dialog.tsx  calendar.tsx  command.tsx  form.tsx  table.tsx  toaster.tsx  use-toast.ts
frontend/src/components/createReport/: CreateReport.tsx
frontend/src/components/reportData/: ReportData.tsx
frontend/src/components/services/: reportService.js
frontend/src/components/views/: ReportCalendar.tsx  ReportData.tsx
